# SDSS-SpecViewer

./: .gitattributes  .gitignore  .sdssv_spec_appREMOTE.py.swp  Manifest.toml  Project.toml  README.md  dash.css  dependencies.sh  dictionaries-txt.json  dictionaries.txt  link_creator.py  pixi.toml  pyproject.toml  redshifts.txt  sdssv_spec_appREMOTE.py  sdssv_spec_appREMOTE_desi.py  update.jl  update_dictionaries.jl  update_dictionaries.py  update_pixi.jl
.github/workflows/: CI.yml
data/: .gitignore  all.json  bhm.meta.json  hdr.json  hdr.toml
log/: diff.jl  spAll-lite-v6_0_9.txt  spAll-lite-v6_0_9.v6_1_0.diff  spAll-lite-v6_1_0.txt  spAll-lite-v6_1_0.v6_1_1.diff  spAll-lite-v6_1_1.txt  spAll-lite-v6_1_1.v6_1_2.diff  spAll-lite-v6_1_2.txt  spAll-lite-v6_1_2.v6_1_3.diff  spAll-lite-v6_1_3.txt  spAll-lite-v6_1_3.v6_2_0.diff  spAll-lite-v6_2_0.txt  spAll-lite-v6_2_0.v6_2_1.diff  spAll-lite-v6_2_1.txt
src/: SpecViewer.jl  const.jl
test/: Project.toml  misc.jl  runtests.jl  sdss.jl  util.jl
util/: __init__.py  base.py  base_test.py  link.py  link_test.py  math.py  math_test.py  sdss.py  sdss_test.py  unit.py  unit_test.py
