
[tool.pixi.dependencies]
astropy = "<=4.3.1"
coverage = "*"
dash = "<=2.13.0"
numpy = "<=1.21.4"
plotly = "<=5.0.0"
pytest = "*"
python = "~=3.10.18"
requests = "<=2.23.0"
types-requests = "*"

[tool.pixi.pypi-dependencies]
plotly-stubs = "*"

[tool.pixi.pypi-options]
no-build = true

[tool.pixi.tasks]
lcov = "coverage run -m pytest -q && coverage lcov && coverage report"
main = "python sdssv_spec_appREMOTE.py"
sync = "git pull -ptr && pixi install"
test = "pytest -v"
updt = "julia --startup-file=no --project update_pixi.jl"

[tool.pixi.workspace]
channels = ["conda-forge"]
name = "SpecViewer"
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[project]
dependencies = [
	"astropy",
	"dash",
	"numpy",
	"plotly",
	"requests",
	"setuptools<81",
]
name = "SpecViewer"
requires-python = ">=3.10"

[tool.coverage]
# https://coverage.readthedocs.io/en/latest/
lcov.output = "util/lcov.info"
run.data_file = "util/__pycache__/.coverage"
run.source = ["util"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/
cache_dir = "util/__pycache__"
testpaths = "util"
