
[tool.pixi.dependencies]
astropy = "<=4.3.1"
coverage = "*"
dash = "<=2.13.0"
numpy = "<=1.21.4"
plotly = "<=5.0.0"
pytest = "*"
python = "~=3.10.0"
pyzstd = "<=0.15.9"
requests = "<=2.23.0"
setuptools = "<=80.8.0"
types-requests = "*"

[tool.pixi.tasks]
lcov = "coverage run -m pytest -q && coverage lcov && coverage report"
main = "python sdssv_spec_appREMOTE.py"
sync = "git pull -ptr && pixi install --frozen"
test = "pytest -v"
updt = "julia --startup-file=no --project update_pixi.jl"
upgd = "pixi upgrade --exclude python && pixi run updt"

[tool.pixi.workspace]
channels = ["conda-forge"]
name = "SpecViewer"
platforms = ["linux-64", "win-64", "osx-arm64"]

[project]
dependencies = [
	"astropy",
	"dash",
	"numpy",
	"plotly",
	"pyzstd",
	"requests",
]
name = "SpecViewer"
requires-python = ">=3.10"
version = "0.1.0"

[tool.coverage]
# https://coverage.readthedocs.io/en/latest/
lcov.output = "util/lcov.info"
run.branch = true
run.data_file = "util/__pycache__/.coverage"
run.omit = ["*_test.py"]
run.source = ["util"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
comment_prefix = " #"
line_length = 256

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/
cache_dir = "util/__pycache__/mypy/"
sqlite_cache = true
warn_unused_ignores = true

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
deprecateTypingAliases = true
enableTypeIgnoreComments = false
include = ["util/", "sdssv_spec_appREMOTE.py"]
pythonPlatform = "All"
pythonVersion = "3.10"
reportImportCycles = true
reportMatchNotExhaustive = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = true
reportUnusedExpression = false
reportUnusedVariable = false
typeCheckingMode = "strict"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/
cache_dir = "util/__pycache__/pytest/"
testpaths = "util"
